fix : replies in post detail too short

--- a/BBS/wwwroot/_Layout.css
+++ b/BBS/wwwroot/_Layout.css
@@ -484,7 +484,7 @@ p.timeIndicator {
 
 #Replies {
     position: relative;
-    height: 8em;
+    height: auto;
     overflow-y: auto;
     grid-area: D;
 }
